# keysmith

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CTestConfig.cmake  Messages.sh  README.md  REUSE.toml  org.kde.keysmith.appdata.xml  org.kde.keysmith.desktop  org.kde.keysmith.json  org.kde.keysmith.json.license  org.kde.otpclient.appdata.xml  org.kde.otpclient.desktop  org.kde.otpclient.json  snapcraft.yaml
.reuse/: dep5
android/: AndroidManifest.xml  AndroidManifest.xml.in  CMakeLists.txt  android-export.in.sh  build.gradle
autotests/: CMakeLists.txt  base32-decode.cpp  hotp-generator-samples.cpp  totp-generator-samples.cpp
autotests/account/: CMakeLists.txt
autotests/account/compute-jobs/: CMakeLists.txt  compute-hotp.cpp  compute-totp.cpp
autotests/account/dispatcher/: CMakeLists.txt  dispatcher-dispatch.cpp  dispatcher-next.cpp
autotests/account/file-jobs/: CMakeLists.txt  delete-accounts.cpp  load-accounts.cpp  request-account-password.cpp  save-hotp.cpp  save-totp.cpp
autotests/account/file-jobs/resources/: resources.qrc
autotests/account/file-jobs/resources/delete-accounts/: only-hotp-left.ini
autotests/account/file-jobs/resources/load-accounts/: invalid-accounts.ini  sample-accounts.ini
autotests/account/file-jobs/resources/request-account-password/: existing-password.ini  new-password-result.ini
autotests/account/file-jobs/resources/save-hotp/: expected-accounts-1.ini  expected-accounts-2.ini
autotests/account/file-jobs/resources/save-totp/: expected-accounts-1.ini  expected-accounts-2.ini  expected-accounts.ini
autotests/account/keys/: CMakeLists.txt  account-secret-password-flow.cpp
autotests/account/storage/: CMakeLists.txt  hotp-counter-update.cpp  storage-aborted-lifecycle.cpp  storage-default-lifecycle.cpp  storage-object-lifecycles.cpp
autotests/account/storage/resources/: resources.qrc
autotests/account/storage/resources/counter-update/: after-updating-counter.ini  starting.ini
autotests/account/storage/resources/storage-lifecycles/: after-adding.ini  after-adding.ini.license  after-removing.ini  starting.ini  starting.ini.license
autotests/account/test-utils/: CMakeLists.txt  job.cpp  job.h  output.cpp  output.h  secret.cpp  secret.h  spy.cpp  spy.h
autotests/account/validation/: CMakeLists.txt  account-validation.cpp
autotests/app/: CMakeLists.txt  commandline-account-job.cpp  commandline-options.cpp
autotests/base32/: CMakeLists.txt  base32-coding-decoding.cpp  base32-decode.cpp  base32-validate.cpp
autotests/hmac/: CMakeLists.txt  hmac-samples.cpp  hmac-validate-keysize.cpp
autotests/model/: CMakeLists.txt  milliseconds-left-for-token.cpp  qr-input.cpp
autotests/oath/: CMakeLists.txt  convert-timestep-counter.cpp  count-timesteps.cpp  encode-token-defaults.cpp  hotp-algorithm.cpp  luhn-checksum.cpp  totp-algorithm.cpp
autotests/secrets/: CMakeLists.txt  encrypt-decrypt-rt.cpp  key-derivation.cpp
autotests/secrets/test-utils/: CMakeLists.txt  random.cpp  random.h
autotests/test-utils/: CMakeLists.txt  spy.cpp  spy.h
autotests/uri/: CMakeLists.txt  percent-encoding.cpp  qr-parsing.cpp
autotests/validators/: CMakeLists.txt  base32-validator.cpp  datetime-parsing.cpp  epoch-validator.cpp  issuer-validator.cpp  name-validator.cpp  test-util.h  unsigned-long-parsing.cpp  unsigned-long-validator.cpp
cmake/: FindLibOath.cmake  Findsodium.cmake
flatpak/oath-toolkit/: fseeko.patch
po/ar/: keysmith.po
po/ast/: keysmith.po
po/ca/: keysmith.po
po/ca@valencia/: keysmith.po
po/cs/: keysmith.po
po/de/: keysmith.po
po/en_GB/: keysmith.po
po/eo/: keysmith.po
po/es/: keysmith.po
po/et/: keysmith.po
po/eu/: keysmith.po
po/fi/: keysmith.po
po/fr/: keysmith.po
po/ga/: keysmith.po
po/gl/: keysmith.po
po/he/: keysmith.po
po/hi/: keysmith.po
po/hu/: keysmith.po
po/ia/: keysmith.po
po/it/: keysmith.po
po/ja/: keysmith.po
po/ka/: keysmith.po
po/ko/: keysmith.po
po/lt/: keysmith.po
po/nl/: keysmith.po
src/: CMakeLists.txt  account.cpp  account.h  accountmodel.cpp  accountmodel.h  base32.cpp  base32.h  keysmith-features.h.in  logging_p.h  main.cpp  oath_p.h  resources.qrc  stateconfig.kcfg  stateconfig.kcfgc  version.h.in
src/account/: CMakeLists.txt  account.cpp  account.h  account_p.cpp  account_p.h  actions_p.cpp  actions_p.h  keys.cpp  keys.h  validation.cpp  validation.h
src/app/: CMakeLists.txt  cli.cpp  cli.h  flows_p.cpp  flows_p.h  keysmith.cpp  keysmith.h  state_p.cpp  state_p.h  vms.cpp  vms.h
src/backups/: CMakeLists.txt  backups.cpp  backups.h
src/base32/: CMakeLists.txt  base32.cpp  base32.h
src/contents/ui/: AccountDetailsPage.qml  AccountEntryView.qml  AccountEntryViewBase.qml  AccountNameForm.qml  AccountsOverview.qml  AddAccount.qml  ErrorPage.qml  HOTPAccountEntryView.qml  HOTPDetailsForm.qml  ImportAccount.qml  KeysmithGlobalDrawer.qml  Main.qml  QRScanPage.qml  QrCodeImageScanner.qml  QrCodeScanner.qml  QrCodeVideoScanner.qml  RenameAccount.qml  SetupPassword.qml  TOTPAccountEntryView.qml  TOTPDetailsForm.qml  TokenDetailsForm.qml  TokenEntryViewLabels.qml  UnlockAccounts.qml  main.qml
src/hmac/: CMakeLists.txt  hmac.cpp  hmac.h
src/model/: CMakeLists.txt  accounts.cpp  accounts.h  input.cpp  input.h  password.cpp  password.h  qr.cpp  qr.h
src/oath/: CMakeLists.txt  oath.cpp  oath.h  util.cpp  util.h
src/qrcode/: CMakeLists.txt  qrcodegenerator.cpp  qrcodegenerator.h  qrcodeimage.cpp  qrcodeimage.h  qrcodevideo.cpp  qrcodevideo.h
src/scanner/: CMakeLists.txt  qrcode.cpp  qrcode.h  qrcodegenerator.cpp  qrcodeimage.cpp  qrcodeimage.h  qrcodevideo.cpp
src/secrets/: CMakeLists.txt  secrets.cpp  secrets.h  sodium_cpp.h
src/uri/: CMakeLists.txt  uri.cpp  uri.h
src/validators/: CMakeLists.txt  countervalidator.cpp  countervalidator.h  datetimevalidator.cpp  datetimevalidator.h  issuervalidator.cpp  issuervalidator.h  namevalidator.cpp  namevalidator.h  otpuri.cpp  otpuri.h  qmlsupport.cpp  qmlsupport.h  secretvalidator.cpp  secretvalidator.h  util.cpp  util.h
(+18 files in other folders)
